force-app/main/default/objects/Structural_Analysis__c/Structural_Analysis__c.object-meta.xml
<CustomObject>
    <label>Structural Analysis</label>
    <nameField>
        <displayFormat>ST-{00000000}</displayFormat>
        <label>Structural Analysis Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Structural Analyses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>