force-app/main/default/objects/Structural_Analysis__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <description>Building where these Structural Analysis is applicable</description>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Structural Analyses</relationshipLabel>
    <relationshipName>Structural_Analyses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>