force-app/main/default/objects/Structural_Analysis__c/fields/Building_Height__c.field-meta.xml
<CustomField>
    <fullName>Building_Height__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Building height in respective unit of measure</description>
    <label>Building Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>