force-app/main/default/objects/Structural_Analysis__c/fields/Combined_Load__c.field-meta.xml
<CustomField>
    <fullName>Combined_Load__c</fullName>
    <label>Combined Load</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>