force-app/main/default/objects/Structural_Analysis__c/fields/Drainage_Holes__c.field-meta.xml
<CustomField>
    <fullName>Drainage_Holes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drainage Holes</label>
    <type>Checkbox</type>
</CustomField>