force-app/main/default/objects/Structural_Analysis__c/fields/Heat_Soak__c.field-meta.xml
<CustomField>
    <fullName>Heat_Soak__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heat Soak</label>
    <type>Checkbox</type>
</CustomField>