force-app/main/default/objects/Structural_Analysis__c/fields/On_a_Hill_or_Slope__c.field-meta.xml
<CustomField>
    <fullName>On_a_Hill_or_Slope__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate whether the default location is a hill or slope</description>
    <label>On a Hill or Slope</label>
    <type>Checkbox</type>
</CustomField>