force-app/main/default/objects/Structural_Analysis__c/fields/Seals_Between_Panes__c.field-meta.xml
<CustomField>
    <fullName>Seals_Between_Panes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Seals between panes as default</description>
    <label>Seals Between Panes</label>
    <type>Checkbox</type>
</CustomField>