force-app/main/default/objects/Structural_Analysis__c/fields/Snowload__c.field-meta.xml
<CustomField>
    <fullName>Snowload__c</fullName>
    <description>Snowload Structural Analysis Default</description>
    <label>Snowload</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>