force-app/main/default/objects/Structural_Analysis__c/fields/Wind_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Wind_Pressure__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Wind pressure value set as default country parameter</description>
    <label>Wind Pressure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>