force-app/main/default/objects/Structural_Analysis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Snowload__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>